<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/lightGray"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="44dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:gravity="center_vertical"
            android:background="@color/white">
            <TextView
                android:id="@+id/repost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repost"
                android:textSize="14sp"
                android:textColor="@color/status_header_text"/>
            <TextView
                android:id="@+id/comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/comment"
                android:textSize="14sp"
                android:textColor="@color/status_header_text"/>
            <TextView
                android:id="@+id/like"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/like"
                android:textSize="14sp"
                android:textColor="@color/status_header_text"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/toggle_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="4dp"
            android:src="@drawable/toggle_bar"
            android:visibility="invisible"/>
    </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/lightGray"/>
</LinearLayout>