<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/list_group_divider"
        android:showDividers="beginning|middle|end">
        <include
            layout="@layout/include_prof_header" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/list_item_divider"
            android:showDividers="middle"
            android:background="@color/white">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_item_height"
                android:paddingLeft="@dimen/list_item_padding"
                android:paddingRight="@dimen/list_item_padding"
                android:drawableLeft="@drawable/ic_collection"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:text="@string/title_collection"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:background="?attr/selectableItemBackground"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_item_height"
                android:paddingLeft="@dimen/list_item_padding"
                android:paddingRight="@dimen/list_item_padding"
                android:drawableLeft="@drawable/ic_backup"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:text="@string/title_backup"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:background="?attr/selectableItemBackground"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/list_item_divider"
            android:showDividers="middle"
            android:background="@color/white">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_item_height"
                android:paddingLeft="@dimen/list_item_padding"
                android:paddingRight="@dimen/list_item_padding"
                android:drawableLeft="@drawable/ic_emoticon_manage"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:text="@string/title_emoticon_manage"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:background="?attr/selectableItemBackground"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_item_height"
                android:paddingLeft="@dimen/list_item_padding"
                android:paddingRight="@dimen/list_item_padding"
                android:drawableLeft="@drawable/ic_message_manage"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:text="@string/title_message_manage"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:background="?attr/selectableItemBackground"/>
            <TextView
                android:id="@+id/function"
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_item_height"
                android:paddingLeft="@dimen/list_item_padding"
                android:paddingRight="@dimen/list_item_padding"
                android:drawableLeft="@drawable/ic_function_manage"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:text="@string/title_function_manage"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:background="?attr/selectableItemBackground"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/list_item_divider"
            android:showDividers="middle"
            android:background="@color/white">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_item_height"
                android:paddingLeft="@dimen/list_item_padding"
                android:paddingRight="@dimen/list_item_padding"
                android:drawableLeft="@drawable/ic_settings"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:text="@string/title_settings"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:background="?attr/selectableItemBackground"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_item_height"
                android:paddingLeft="@dimen/list_item_padding"
                android:paddingRight="@dimen/list_item_padding"
                android:drawableLeft="@drawable/ic_test"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:text="测试入口"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:background="?attr/selectableItemBackground"
                android:onClick="test"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>