<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_wealth_account_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.xxhx.xome.ui.disc.wealth.WealthAccountDetailActivity"
    tools:showIn="@layout/activity_wealth_account_detail">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="2dp"
        android:paddingRight="2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:paddingLeft="14dp"
                android:gravity="center_vertical"
                android:hint="@string/title_account_info"
                android:textSize="10sp"
                android:textColor="#999"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">
                <LinearLayout
                    android:id="@+id/section_basic_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/item_org"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:lines="1"
                            android:text="xx Bank Credit"
                            android:textSize="16sp"
                            android:textColor="#333"
                            android:textStyle="bold"/>
                        <TextView
                            android:id="@+id/item_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:text="@string/debit"
                            android:textSize="14sp"
                            android:textColor="@color/darkDisc"/>
                    </LinearLayout>
                    <TextView
                        android:id="@+id/item_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textIsSelectable="true"
                        android:gravity="center_vertical"
                        android:drawableLeft="@drawable/no_dot"
                        android:drawablePadding="4dp"
                        android:text="6222 0202 0002 3400 464"
                        android:textSize="16sp"
                        android:textColor="#333"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="bottom"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/item_balance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:lines="1"
                            android:text="10,1024.13"
                            android:textSize="40sp"
                            android:textColor="@color/positiveWealth"/>
                        <TextView
                            android:id="@+id/item_bill"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginBottom="2dp"
                            android:gravity="center_vertical"
                            android:drawableRight="@drawable/ic_bill_edit"
                            android:drawablePadding="4dp"
                            android:text="待还12.00"
                            android:textSize="16sp"
                            android:textColor="@color/negativeWealth"
                            android:onClick="editBill"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/section_credit_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/section_basic_info"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingBottom="14dp"
                    android:orientation="vertical"
                    android:visibility="visible">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layerType="software"
                        android:background="@drawable/dash_line_horizontal"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_bill_repayment_day"
                            android:textColor="#333"
                            android:textSize="16sp"/>
                        <TextView
                            android:id="@+id/item_bill_repayment_day"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:text="01日/25日"
                            android:textColor="#999"
                            android:textSize="15sp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_expire_date"
                            android:textColor="#333"
                            android:textSize="16sp"/>
                        <TextView
                            android:id="@+id/item_expire_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:text="02/2025"
                            android:textColor="#999"
                            android:textSize="15sp"/>
                    </LinearLayout>
                </LinearLayout>
                <TextView
                    android:id="@+id/item_added_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:paddingLeft="8dp"
                    android:paddingTop="2dp"
                    android:paddingRight="4dp"
                    android:paddingBottom="2dp"
                    android:layout_marginTop="8dp"
                    android:text="2天前 添加"
                    android:textSize="12sp"
                    android:background="#66FFB900"/>
                <TextView
                    android:id="@+id/item_warning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:paddingLeft="8dp"
                    android:paddingTop="2dp"
                    android:paddingRight="4dp"
                    android:paddingBottom="2dp"
                    android:layout_marginTop="32dp"
                    android:text="2天后 逾期"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:background="#99FF1100"/>
            </RelativeLayout>
            <ViewStub
                android:id="@+id/stub_gain_chart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inflatedId="@+id/section_gain_chart"
                android:layout="@layout/include_gain_chart"/>
            <ViewStub
                android:id="@+id/stub_recent_turnover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:inflatedId="@+id/section_recent_turnover"
                android:layout="@layout/include_recent_turnover"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/section_wealth_change"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:visibility="gone">
        <com.xxhx.xome.view.material.RippleTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wealth_out"
            android:textSize="18sp"
            android:textColor="@color/disc"
            android:background="@color/white"
            android:onClick="wealthOut"/>
        <com.xxhx.xome.view.material.RippleTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wealth_in"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@color/disc"
            android:onClick="wealthIn"/>
    </LinearLayout>
</LinearLayout>
